# debugpy-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_mcp_server.py
debugpy_mcp_server/: __init__.py  dap_client.py  debugpy_client.py  models.py  server.py  stdio_server.py
examples/: debug_usage_guide.md  interactive_debug_example.py  simple_debug_example.py  test_program.py
