[project]
name = "debugpy-mcp-server"
version = "1.0.0"
description = "MCP server providing debugpy debugging capabilities for LLM/agent debugging"
authors = [
    {name = "aXaTT Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.9.0",
    "debugpy>=1.8.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "psutil>=5.9.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Debuggers",
]

[project.scripts]
debugpy-mcp-server = "debugpy_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["debugpy_mcp_server"]

[tool.uv]
dev-dependencies = [] 